<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:gravity="center"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageAppIcon"
                android:layout_width="@dimen/margin70"
                android:layout_height="@dimen/margin70"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/margin10"
                android:contentDescription="@string/image_appicon"
                android:src="@drawable/vote1" />

            <TextView
                android:id="@+id/txtMyVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10"
                android:layout_marginStart="@dimen/margin5"
                android:layout_toEndOf="@id/imageAppIcon"
                android:text="@string/txt_my_vote"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/size30" />

        </RelativeLayout>

        <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        android:textSize="@dimen/size25"
        android:layout_marginBottom="@dimen/margin10"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTxtFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="@dimen/margin0"
            android:layout_marginEnd="@dimen/margin5"
            android:inputType="textPersonName"
            android:hint="@string/prompt_first_name"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:textSize="@dimen/size15"
            android:background="@drawable/rectangle_background"/>

        <EditText
            android:id="@+id/editTxtLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="@dimen/margin0"
            android:inputType="textPersonName"
            android:hint="@string/prompt_last_name"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:textSize="@dimen/size15"
            android:background="@drawable/rectangle_background"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/autoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:maxLines="1"
            android:textSize="@dimen/size15"
            android:background="@drawable/rectangle_background"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:textSize="@dimen/size15"
            android:background="@drawable/rectangle_background"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTxtRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_retype_password"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:textSize="@dimen/size15"
            android:background="@drawable/rectangle_background"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxBeInformed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/margin10"/>

    </LinearLayout>

        <Spinner
            android:id="@+id/spinnerRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size10"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_background"
            android:layout_marginTop="@dimen/margin10"/>

        <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="@string/action_sign_up"
        android:textAllCaps="true"
        android:textSize="@dimen/size15"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_background"
        android:layout_marginTop="@dimen/margin10"/>

    <TextView
        android:id="@+id/lineSeparator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_background"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginBottom="@dimen/margin10"/>

    <TextView
        android:id="@+id/txtYouDiff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_you_diff"
        android:textSize="@dimen/size15"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/margin10"/>
</LinearLayout>
</ScrollView>